Drive our QAnimationDriver fully by presentation timestamps

Outputs can have different next presentation timestamps, elapsed() can
roll back, which is generally not good for animations. We need to guard
the QAnimationDriver against this case.

While on this, also make m_offset sync with the first provided
presentation timestamp to make calculated delta times more predictable.

BUG: 516240


(cherry picked from commit e187fa5d18af4e6b10e9ead575f5cdf42c2c2473)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>